# ELFReader

./: CMakeLists.txt  README.md  a.out  elfReader.cpp
src/: DynamicEntry.cpp  DynamicEntry.h  ELFHeader.cpp  ELFHeader.h  NoteEntry.cpp  NoteEntry.h  PHeader.cpp  PHeader.h  RelaEntry.cpp  RelaEntry.h  SHeader.cpp  SHeader.h  SymbolEntry.cpp  SymbolEntry.h  main.cpp
